--- a/spl-token/package.json
+++ b/spl-token/package.json
@@ -12,13 +12,14 @@
   "devDependencies": {
     "bs58": "^6.0.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@solana-developers/helpers": "^2.5.4",
-    "@solana/spl-token": "^0.4.8",
-    "@solana/web3.js": "^1.95.3",
+    "@solana-developers/helpers": "^2.3.0",
+    "@solana/web3.js": "^1.91.6",
     "dotenv": "^16.4.5",
-    "esrun": "^3.2.26"
+    "typescript": "^5.4.5",
+    "@solana/spl-token": "^0.4.8"
   }
 }
